feat: harmonize mail editionDate variable to DateEdition (#90)
* feat: harmonize mail editionDate variable to DateEdition

* chore: resolve minor code issues and remove dead code